--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -2,7 +2,7 @@
     <!-- <div class="container">
         <app-stepper></app-stepper>
       </div> -->
-      <div class="row stepper">
+      <div class="row">
         <div class="col-md-12">
           <app-stepper [currentStep]="3" [stepperData]="steps"></app-stepper>
         </div>
