--- a/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/summary/summary.component.html
@@ -2,8 +2,8 @@
     <!-- <div class="container">
         <app-stepper></app-stepper>
     </div> -->
-    <div class="row stepper">
-        <div class="col-md-12">
+    <div class="row">
+        <div class="col-12">
           <app-stepper [currentStep]="4" [stepperData]="steps"></app-stepper>
         </div>
       </div>
