--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.css
@@ -128,15 +128,23 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
-@media screen and (max-width:1400px) and (min-width:280px),
+@media screen and (max-width:1400px) and (min-width:180px),
 (max-width:280px) {
-  .container {
+  /* .container {
     background: #f5f6f8;
     display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-between;
     padding: 20px;
+  } */
+  .container {
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    background: #f5f6f8;
   }
 
   #container {
