VQ-1586:Ability to View Policy Product Details.

--- a/src/app/features/gis/components/policy/components/underwriting/underwriting.component.html
+++ b/src/app/features/gis/components/policy/components/underwriting/underwriting.component.html
@@ -35,22 +35,22 @@
                     <p class="questions-text"> {{'gis.policy.is_the_policy_short_period' | translate}}</p>
                     <div class="d-flex ">
                         <div class="form-check  me-3">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault5" id="flexRadioDefault5">
                             <label class="form-check-label" for="flexRadioDefault5">{{'gis.policy.yes' | translate}} </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault6">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault5" id="flexRadioDefault6">
                             <label class="form-check-label" for="flexRadioDefault6">{{'gis.policy.no' | translate}} </label>
                         </div>
                     </div>
                     <p class="mt-4 questions-text">{{'gis.policy.is_the_policy_renewable' | translate}}</p>
                     <div class="d-flex ">
                         <div class="form-check  me-3">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault7">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault7" id="flexRadioDefault7">
                             <label class="form-check-label" for="flexRadioDefault7">{{'gis.policy.yes' | translate}} </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault8">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault7" id="flexRadioDefault8">
                             <label class="form-check-label" for="flexRadioDefault8">{{'gis.policy.no' | translate}} </label>
                         </div>
 
@@ -58,11 +58,11 @@
                     <p class="mt-4 questions-text">{{'gis.policy.is_it_a_new_client' | translate}}</p>
                     <div class="d-flex ">
                         <div class="form-check  me-3">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault7">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault9" id="flexRadioDefault9">
                             <label class="form-check-label" for="flexRadioDefault5">{{'gis.policy.yes' | translate}} </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault7">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault9" id="flexRadioDefault10">
                             <label class="form-check-label" for="flexRadioDefault6">{{'gis.policy.no' | translate}} </label>
                         </div>
                     </div>
